# rust-web-learn

./: .gitignore  Cargo.toml  setup.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20250325104703_answers_table.up.sql
src/: config.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  pagination.rs  question.rs
