[package]
name = "practical-rust-book"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
log = "0.4"
env_logger = "0.9"
log4rs = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = "0.8"
rust-argon2 = "1.0"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
